<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/d"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:typeface="serif"
        android:textColor="@color/white"
        android:text="@string/number" />

    <EditText
        android:id="@+id/etnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        android:text="@string/result" />

    <Button
        android:id="@+id/btnIncre"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@color/light_green"
        android:layout_margin="10dp"
        android:typeface="serif"
        android:text="@string/btnincre" />

    <Button
        android:id="@+id/btnDecre"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:typeface="serif"
        android:layout_margin="10dp"
        android:background="@color/light_green"
        android:text="@string/btndecre" />
    
    <Button
        android:id="@+id/btnback"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@color/light_green"
        android:layout_margin="10dp"
        android:typeface="serif"
        android:text="@string/btnBack" />
    

</LinearLayout>
