<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/d"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:typeface="serif"
        android:layout_marginLeft="10dp"
        android:text="@string/fnumber" />

    <EditText
        android:id="@+id/etfnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        android:typeface="serif"
        android:text="@string/snumber" />

    <EditText
        android:id="@+id/etsnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/tvresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:typeface="serif"
        android:layout_marginLeft="10dp"
        android:text="@string/result" />

    
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

     

    <Button
        android:id="@+id/btnadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:typeface="serif"
        android:background="@color/light_green"
        android:text="@string/btnAdd" />


    <Button
        android:id="@+id/btnsub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:background="@color/light_green"
       android:layout_margin="20dp"
       android:typeface="serif"
       android:textColor="@color/white"
        android:text="@string/btnSub" />
    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <Button
        android:id="@+id/btnback"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/light_green"
        android:typeface="serif"
        android:text="@string/btnBack"
        android:textColor="@color/white" />
    </LinearLayout>.
    </LinearLayout>
    
</LinearLayout>
