<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    >
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/d"
        android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/topic"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />

   

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:scaleType="fitXY"
                android:src="@drawable/y" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/histo"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="italic"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/soci"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnfb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/face" />
            
            <WebView 
                android:id="@+id/Wv"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                />

            <Button
                android:id="@+id/btnIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/link" />

            <Button
                android:id="@+id/btngogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/gugu" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:scaleType="fitXY"
                android:src="@drawable/pretty" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/aki"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="italic"
                android:typeface="serif" />
            
            
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btncancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btndec"
                android:layout_margin="30dp"
                android:background="@drawable/button_style" />
            
            <Button
                android:id="@+id/btnsubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnenter"
                android:layout_margin="30dp"
                android:background="@drawable/button_style" />
</LinearLayout>
        </LinearLayout>
   </LinearLayout>
    </ScrollView>
  